--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "count_crab"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8,<3.12"
 fastapi = "^0.95.2"
 uvicorn = "^0.22.0"
 line-bot-sdk = "^2.4.2"
