--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.95.2"
 uvicorn = "^0.22.0"
 line-bot-sdk = "^2.4.2"
 gunicorn = "^20.1.0"
+python-multipart = "^0.0.6"
+
 
 
 [build-system]
