--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ idna==3.4
 line-bot-sdk==2.4.2
 multidict==6.0.4
 pydantic==1.10.7
+python-multipart==0.0.6
 requests==2.28.2
 sniffio==1.3.0
 starlette==0.27.0
