--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,27 +14,33 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.3.0
+      uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
+        install_components: 'gke-gcloud-auth-plugin'
         export_default_credentials: true
 
-    - name: Configure Docker
+    - name: Configure Docker for Artifact Registry
       run: |
-        gcloud auth configure-docker
+        gcloud auth configure-docker asia-southeast1-docker.pkg.dev
 
-    - name: Build and push Docker image
+    - name: Build and push Docker image to Artifact Registry
       run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/count-crab:${{ github.sha }} .
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/count-crab:${{ github.sha }}
+        # Create repository if it doesn't exist (optional)
+        gcloud artifacts repositories create count-crab-repo --repository-format=docker \
+          --location=asia-southeast1 --description="Docker repository for count-crab" || true
+        
+        # Build and push to Artifact Registry
+        docker build -t asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/count-crab-repo/count-crab:${{ github.sha }} .
+        docker push asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/count-crab-repo/count-crab:${{ github.sha }}
 
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy count-crab \
-        --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/count-crab:${{ github.sha }} \
+        --image asia-southeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/count-crab-repo/count-crab:${{ github.sha }} \
         --region asia-southeast1 \
         --platform managed \
         --allow-unauthenticated \
-        --set-env-vars ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }},SECRET_CHANNEL=${{ secrets.SECRET_CHANNEL }},AZURE_PREDICT_URL=${{ secrets.AZURE_PREDICT_URL }},AZURE_PREDICT_KEY=${{ secrets.AZURE_PREDICT_KEY }},OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}  \
+        --set-env-vars ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }},SECRET_CHANNEL=${{ secrets.SECRET_CHANNEL }},OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
         --max-instances=10
