--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-multipart==0.0.6
 requests==2.28.2
 sniffio==1.3.0
 starlette==0.27.0
-typing_extensions==4.5.0
+typing_extensions>=4.6.0
 urllib3==1.26.15
 uvicorn==0.22.0
 yarl==1.9.2
